--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 
 /* 헤더 및 메뉴 */
 header {
+  display: flex;
+  justify-content: space-around;
   width: 100%;
   background: #ffffff;
   color: #fff;
@@ -37,6 +39,11 @@ header .logo {
   
   border-right: 1px solid #e1e1e1; /* 로고와 메뉴 구분선 */
   padding-right: 1.5rem; /* 로고와 메뉴 구분선과의 간격 */
+}
+
+.logo a {
+  text-decoration: none; /* 밑줄 제거 */
+  color: inherit; /* 부모 요소 색상 상속 */
 }
 
 nav {
@@ -94,9 +101,10 @@ nav button.active {
 /* 갤러리 예시용 */
 .gallery-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
   padding: 1rem;
+  margin: 0 10%;
 }
 
 .gallery-grid img {
@@ -105,6 +113,11 @@ nav button.active {
   object-fit: cover;
 }
 
+.gallery-subtitle{
+  color: aqua;
+  font-weight: 200;
+  margin: 30px 0;
+}
 /* 폼 스타일 (contact.html용) */
 form {
   margin: 0 auto;
@@ -279,8 +292,13 @@ footer {
   line-height: 1.4;
 }
 
-.map-row-buttons . {
+.map-row-buttons {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+}
+
+.login a {
+  text-decoration: none;
+  color:#222
 }
