--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ nav button.active {
 }
 
 .gallery-subtitle{
-  color: aqua;
+  color: rgb(0, 231, 200);
   font-weight: 200;
   margin: 30px 0;
 }
@@ -142,15 +142,53 @@ form button {
 
 /* 푸터 */
 footer {
-  height: 200px;
+  height: 130px;
   background: #222;
   color: white;
   text-align: center;
-  padding: 2rem;
-  margin-top: 2rem;
-  text-align: center; /* 가운데 정렬 */
-  line-height: 120px;  /* 높이와 같은 값으로 세로 가운데 정렬 */
+  /* padding: 2rem; */
+  /* margin-top: 2rem; */
+  /* text-align: center; 가운데 정렬 */
+  /* line-height: 120px;  높이와 같은 값으로 세로 가운데 정렬 */
 }
+
+.footer_inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 가운데 정렬 */
+  justify-content: center; /* 세로 가운데 정렬 */
+  height: 100%; /* 부모 요소의 높이를 채움 */
+  margin: 0 50px;
+  padding: 50px 0; /* 위아래 패딩 추가 */
+}
+
+.footer_logo {
+  display: flex;
+  align-items:first baseline;
+  justify-content: space-around;
+  width: 100%;
+}
+.sns_btns {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.sns_btn {
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    background: none;
+    justify-items:first baseline;
+    display: flex;
+    align-items: center;
+}
+
+  .social-button svg {
+    width: 100%;
+    height: 100%;
+  }
 
 /* 전체 탭 */
 .tabs { 
